# Final_proyect_TopicosIA

./: .gitignore  FER.json  Mateo Michel.json  README.md  manage_spotify_playlists.py  pyproject.toml
libros_embeddings/: index_store.json
music_assistant/: agent.py  chatbot.py  config.py  models.py  objects.py  prompts.py  rags.py  tools.py  utils.py
